# pypacker

./: .gitignore  LICENSE.txt  pyproject.toml  readme.md  setup.py
examples/: readme.md
examples/hello_world/: hello.py
examples/hello_world_file/: hello.py  readme.md
examples/hello_world_file/data/: data.txt
examples/tkinter/: hello.py
pypacker/: __main__.py
src/: __main__.py
src/pypacker/: __main__.py
